--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -9,7 +9,7 @@ jobs:
     name: Gatsby Deploy
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@dev
+      - uses: actions/checkout@master
       - name: Setup Node.js
         uses: actions/setup-node@master
         with:
