--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -10,11 +10,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - name: Setup Node.js
-        uses: actions/setup-node@master
+      - uses: enriikke/gatsby-gh-pages-action@v2
         with:
-          node-version: 10.x
-      - name: Install dependencies
-        run: yarn install --pure-lockfile
-      - name: Deploy
-        run: yarn run deploy
+          access-token: ${{ secrets.ACCESS_TOKEN }}
