--- a/package.json
+++ b/package.json
@@ -8,41 +8,39 @@
     "url": "https://github.com/franciscoamado/franciscoamado.github.io/issues"
   },
   "dependencies": {
-    "babel-plugin-styled-components": "^1.10.6",
-    "gatsby": "^2.15.34",
-    "gatsby-cli": "^2.11.1",
-    "gatsby-image": "^2.2.25",
-    "gatsby-plugin-feed": "^2.3.16",
-    "gatsby-plugin-google-analytics": "^2.1.21",
-    "gatsby-plugin-manifest": "^2.2.21",
-    "gatsby-plugin-netlify-cms": "^4.1.23",
-    "gatsby-plugin-offline": "^2.2.10",
-    "gatsby-plugin-react-helmet": "^3.1.11",
-    "gatsby-plugin-sharp": "^2.2.29",
-    "gatsby-plugin-styled-components": "^3.1.9",
-    "gatsby-plugin-typography": "^2.3.12",
-    "gatsby-remark-copy-linked-files": "^2.1.26",
-    "gatsby-remark-images": "^2.0.6",
-    "gatsby-remark-responsive-iframe": "^2.2.23",
-    "gatsby-remark-smartypants": "^2.1.12",
-    "gatsby-remark-vscode": "^1.2.1",
-    "gatsby-source-filesystem": "^2.1.31",
-    "gatsby-transformer-remark": "^2.6.28",
-    "gatsby-transformer-sharp": "^2.2.21",
-    "netlify-cms-app": "^2.9.7",
-    "react": "^16.10.2",
-    "react-bootstrap": "^1.0.0-beta.14",
-    "react-dom": "^16.10.2",
-    "react-helmet": "^5.2.0",
-    "react-switch": "^5.0.1",
-    "react-typography": "^0.16.19",
-    "sharp": "^0.23.1",
-    "styled-components": "^4.4.0",
-    "typography": "^0.16.19"
+    "babel-plugin-styled-components": "^2.0.0",
+    "gatsby": "^4.24.0",
+    "gatsby-cli": "^4.24.0",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-google-gtag": "^4.24.0",
+    "gatsby-plugin-manifest": "^4.24.0",
+    "gatsby-plugin-netlify-cms": "^6.24.0",
+    "gatsby-plugin-react-helmet": "^5.24.0",
+    "gatsby-plugin-sharp": "^4.24.0",
+    "gatsby-plugin-styled-components": "^5.24.0",
+    "gatsby-plugin-typography": "^4.24.0",
+    "gatsby-remark-copy-linked-files": "^5.24.0",
+    "gatsby-remark-images": "^6.24.0",
+    "gatsby-remark-responsive-iframe": "^5.24.0",
+    "gatsby-remark-smartypants": "^5.24.0",
+    "gatsby-remark-vscode": "^3.3.1",
+    "gatsby-source-filesystem": "^4.24.0",
+    "gatsby-transformer-remark": "^5.24.0",
+    "gatsby-transformer-sharp": "^4.24.0",
+    "netlify-cms-app": "^2.15.72",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-switch": "^7.0.0",
+    "react-typography": "^0.16.20",
+    "sharp": "^0.31.2",
+    "styled-components": "^5.3.6",
+    "typography": "^0.16.21"
   },
   "devDependencies": {
-    "gh-pages": "^2.1.1",
-    "prettier": "^1.17.0"
+    "gh-pages": "^4.0.0",
+    "prettier": "^2.7.1"
   },
   "homepage": "https://github.com/franciscoamado/franciscoamado.github.io#readme",
   "keywords": [
