--- a/package.json
+++ b/package.json
@@ -8,39 +8,38 @@
     "url": "https://github.com/franciscoamado/franciscoamado.github.io/issues"
   },
   "dependencies": {
-    "babel-plugin-styled-components": "^2.0.0",
-    "gatsby": "^4.24.0",
-    "gatsby-cli": "^4.24.0",
-    "gatsby-image": "^3.11.0",
-    "gatsby-plugin-google-gtag": "^4.24.0",
-    "gatsby-plugin-manifest": "^4.24.0",
-    "gatsby-plugin-netlify-cms": "^6.24.0",
-    "gatsby-plugin-react-helmet": "^5.24.0",
-    "gatsby-plugin-sharp": "^4.24.0",
-    "gatsby-plugin-styled-components": "^5.24.0",
-    "gatsby-plugin-typography": "^4.24.0",
-    "gatsby-remark-copy-linked-files": "^5.24.0",
-    "gatsby-remark-images": "^6.24.0",
-    "gatsby-remark-responsive-iframe": "^5.24.0",
-    "gatsby-remark-smartypants": "^5.24.0",
+    "gatsby": "^5.12.12",
+    "gatsby-cli": "^5.12.4",
+    "gatsby-plugin-google-gtag": "^5.12.3",
+    "gatsby-plugin-image": "^3.12.3",
+    "gatsby-plugin-manifest": "^5.12.3",
+    "gatsby-plugin-react-helmet": "^6.12.0",
+    "gatsby-plugin-sharp": "^5.12.3",
+    "gatsby-plugin-typography": "^5.12.0",
+    "gatsby-remark-copy-linked-files": "^6.12.0",
+    "gatsby-remark-images": "^7.12.3",
+    "gatsby-remark-responsive-iframe": "^6.12.0",
+    "gatsby-remark-smartypants": "^6.12.0",
     "gatsby-remark-vscode": "^3.3.1",
-    "gatsby-source-filesystem": "^4.24.0",
-    "gatsby-transformer-remark": "^5.24.0",
-    "gatsby-transformer-sharp": "^4.24.0",
-    "netlify-cms-app": "^2.15.72",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "react-helmet": "^6.0.0",
-    "react-bootstrap": "^2.6.0",
+    "gatsby-source-filesystem": "^5.12.1",
+    "gatsby-transformer-remark": "^6.12.3",
+    "gatsby-transformer-sharp": "^5.12.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-bootstrap": "^2.9.1",
     "react-switch": "^7.0.0",
-    "react-typography": "^0.16.20",
-    "sharp": "^0.31.2",
-    "styled-components": "^5.3.6",
+    "react-typography": "^0.16.23",
+    "sharp": "^0.32.6",
     "typography": "^0.16.21"
   },
   "devDependencies": {
-    "gh-pages": "^4.0.0",
-    "prettier": "^2.7.1"
+    "autoprefixer": "^10.4.16",
+    "gatsby-plugin-postcss": "^6.12.0",
+    "gh-pages": "^6.1.0",
+    "postcss": "^8.4.31",
+    "prettier": "^3.1.0",
+    "tailwindcss": "^3.3.5"
   },
   "homepage": "https://github.com/franciscoamado/franciscoamado.github.io#readme",
   "keywords": [
@@ -55,10 +54,9 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write src/**/*.{js,jsx}",
-    "start": "yarn run develop",
+    "format": "prettier --write \"src/**/*.{js,jsx}\"",
+    "start": "npm run develop",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
-    "deploy": "gatsby build && gh-pages -d public -b master"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
   }
 }
