fix tailwind config

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/franciscoamado/franciscoamado.github.io/issues"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.2",
     "babel-plugin-styled-components": "^2.1.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
